# reforger-funhouse

./: .gitignore  Dockerfile.idle-monitor  Dockerfile.metrics-exporter  README.md  add-argocd-portforward.ps1  add-argocd-repo.ps1  backend-resources.tf  bootstrap.ps1  compute.tf  control-plane.tf  create.tfplan  deploy_lambdas.py  destroy.tfplan  iam.tf  install-argocd-cli.ps1  main.py  networking.tf  outputs.tf  providers.tf  pyproject.toml  route53.tf  secrets.tf  security-groups.tf  ssh-connect.ps1  untitled-plan-fixK3sArgoCd.prompt.md  vars.tf
.github/workflows/: build-idle-monitor.yml  build-metrics-exporter.yml  deploy-lambdas.yml  teardown-server.yml  terraform-apply.yml
cluster-manifests/: Chart.yaml  values-freedomfighters-modern-finland.yaml  values-freedomfighters.yaml  values-proceduralcombat.yaml
cluster-manifests/templates/: argocd-alerts.yaml  deployment.yaml  external-secrets.yaml  idle-monitor-cronjob.yaml  idle-monitor-deployment.yaml  idle-monitor-service.yaml  metrics-exporter-deployment.yaml  metrics-exporter-service.yaml  monitoring-dashboards.yaml  monitoring-external-secrets.yaml  monitoring-grafana.yaml  monitoring-kube-state-metrics.yaml  monitoring-node-exporter.yaml  monitoring-prometheus.yaml  storage.yaml
discord_control_plane/: __init__.py
discord_control_plane/adapters/: __init__.py  allowlist_loader.py  discord_messaging.py  github_dispatch.py  rcon_sampler.py  scenario_store.py  state_store.py
discord_control_plane/core/: __init__.py  idle.py  (+9 more)
tests/: conftest.py  requirements-test.txt  test_properties.py  test_structural.py
(+10 files in other folders)
