[project]
name = "reforger-funhouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
    "git-filter-repo>=2.47.0",
    "paramiko>=3.4.0",
    "prometheus_client>=0.21.0",
    "pynacl>=1.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hypothesis]
settings = { max_examples = 100 }
